--- a/src/style/scss/elements.scss
+++ b/src/style/scss/elements.scss
@@ -35,6 +35,12 @@ body{
     background-color: #0B24FB;
     border-radius: 50%;
     display: inline-block;
+    @include lt-sm{
+        
+    position: relative;
+    left: 20px;
+
+    }
   }
 
   .card-testi{
